# matrix-rs

./: .gitignore  .gitpod.yml  Cargo.toml  LICENSE  rustfmt.toml
alma-armas/: Cargo.toml
alma-armas/src/: lib.rs  utils.rs
anna-graem/: Cargo.toml
anna-graem/src/: main.rs  matrix_handlers.rs  tg_handlers.rs  utils.rs
anna-tg-matrix-bridge/: Cargo.toml
anna-tg-matrix-bridge/src/: db.rs  lib.rs  main.rs  matrix_handlers.rs  tg_handlers.rs  utils.rs
bot/deal-lilim/: Cargo.toml
bot/deal-lilim/src/: main.rs
dana-tg-matrix-bridge/: Cargo.toml
dana-tg-matrix-bridge/src/: main.rs
dana-zane/: .gitignore  Cargo.toml
dana-zane-no-sdk/: Cargo.toml
dana-zane-no-sdk/src/: main.rs
dana-zane-no-sdk/src/types/: discovery.rs  join.rs  keys.rs  login.rs  mod.rs  room_events.rs  sync.rs
dana-zane-no-sdk/src/utils/: api.rs  megolm.rs  mod.rs
dana-zane/src/: commands.rs  main.rs  utils.rs
deal-lilim/: Cargo.toml
deal-lilim-base-sdk/: Cargo.toml
deal-lilim-base-sdk/src/: main.rs
deal-lilim/discord-log/: Cargo.toml
deal-lilim/discord-log/src/: main.rs
deal-lilim/mcchecker/: Cargo.toml  rustfmt.toml
deal-lilim/mcchecker/src/: main.rs
deal-lilim/murmur-log/: Cargo.toml
deal-lilim/murmur-log/src/: main.rs
deal-lilim/src/: main.rs
deal-tg-matrix-bridge/: Cargo.toml
deal-tg-matrix-bridge/src/: main.rs
lib/booru-feed/: Cargo.toml
lib/booru-feed/src/: feed.rs  lib.rs
lib/booru-feed/src/utils/: db.rs
lib/interactive/: Cargo.toml
lib/interactive/src/: commands.rs  lib.rs  utils.rs
lib/tg-matrix-bridge/: Cargo.toml
lib/tg-matrix-bridge/src/: bridge_structs.rs  bridge_utils.rs  db.rs  lib.rs  matrix_handlers.rs  tg_handlers.rs  timer.rs  utils.rs
lib/utils/: Cargo.toml
lib/utils/src/: anilist.rs  factorio_check.rs  lib.rs  matrix.rs  socket_listeners.rs
