[workspace]
resolver = "2"
members = [
	"alma-armas",
	"dana-zane",
	"deal-lilim",
	"deal-lilim-base-sdk",
	"anna-tg-matrix-bridge",
]

[workspace.dependencies]
alma-armas = { path = "alma-armas" }
dana-zane = { path = "dana-zane" }
deal-lilim = { path = "deal-lilim" }
deal-lilim-base-sdk = { path = "deal-lilim-base-sdk" }
anna-tg-matrix-bridge = { path = "anna-tg-matrix-bridge" }
matrix-sdk = { version = "0.7.1", default-features = false, features = ["rustls-tls", "anyhow", "e2e-encryption", "sqlite"] }
reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.37.0", default-features = false, features = ["rt", "rt-multi-thread"] }
serde_json = "1.0.117"
serde = { version = "1.0.202", default-features = false, features = ["derive"] }
