[workspace]
resolver = "2"
members = [ "lib/interactive", "lib/tg-matrix-bridge", "lib/utils", "bot/deal-lilim" ]

[workspace.dependencies]
interactive = { path = "lib/interactive" }
tg-matrix-bridge = { path = "lib/tg-matrix-bridge" }
utils = { path = "lib/utils" }
anyhow = { version = "1.0.89", default-features = false }
matrix-sdk = { version = "0.7.1", default-features = false, features = ["rustls-tls", "anyhow", "e2e-encryption", "sqlite"] }
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.40.0", default-features = false, features = ["rt", "rt-multi-thread"] }
serde_json = { version = "1.0.128", default-features = false }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
simple_logger = { version = "5.0.0", default-features = false, features = ["time"] }
log = { version = "0.4.22", default-features = true }
