[package]
name = "alma-armas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
futures = "0.3.28"
matrix-sdk = { version = "0.7.1", features = ["anyhow", "e2e-encryption", "sqlite"]  }
mime = "0.3.17"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
tokio = { version = "1.21.2", features = ["full"] }
url = "2.4.0"
