[package]
name = "alma-armas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
futures = "0.3.30"
matrix-sdk = { version = "0.7.1", features = ["anyhow", "e2e-encryption", "sqlite"]  }
mime = "0.3.17"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
teloxide = "0.12.2"
