[package]
name = "alma-armas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
mime = "0.3.17"
rand = "0.8.5"
serde_yaml = "0.9.34"
url = { version = "2.5.0", default-features = false }
teloxide = { version = "0.12.2", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }

serde.workspace = true
matrix-sdk.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde_json.workspace = true
