[package]
name = "anna-tg-matrix-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12.2", default-features = false, features = ["ctrlc_handler", "rustls"] }
serde_yaml = "0.9.34"
mime = "0.3.17"
url = "2.5.2"
simple_logger = "5.0.0"
log = "0.4.22"

matrix-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
