[package]
name = "dana-zane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
matrix-sdk = "0.7.0"
mime = "0.3.17"
serde = "1.0.196"
serde_yaml = "0.9.31"
tokio = { version = "1.21.2", features = ["full"] }
zip = "0.6.6"

