[package]
name = "dana-zane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
mime = "0.3.17"
serde_yaml = "0.9.34"
zip = "0.6.6"

serde.workspace = true
matrix-sdk.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde_json.workspace = true
