[package]
name = "deal-lilim-base-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
matrix-sdk-base = { version = "0.7.0", features = ["e2e-encryption", "automatic-room-key-forwarding"] }
ruma-client = { version = "0.12.0", features = ["hyper-rustls", "client-api"] }
serde_yaml = "0.9.32"
