[package]
name = "deal-lilim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = "0.7.1"
serde = "1.0.196"
serde_yaml = "0.9.32"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
