[package]
name = "deal-lilim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9.34"

matrix-sdk.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
