[package]
name = "discord-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
matrix-sdk = { version = "0.7.1", features = ["anyhow"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
