[package]
name = "murmur-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
futures = "0.3.28"
matrix-sdk = { version = "0.7.1", features = ["anyhow"] }
notify = "6.0.1"
regex = "1.10.3"
serde = { version = "1.0.175", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
