[package]
name = "interactive"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime = "0.3.17"
zip = "2.2.0"

serde.workspace = true
matrix-sdk.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
