[package]
name = "tg-matrix-bridge"
version = "0.0.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13.0", default-features = false, features = ["ctrlc_handler", "rustls", "webhooks", "webhooks-axum", "throttle"] }
mime = { version = "0.3.17", default-features = false }
url = { version = "2.5.2", default-features = false }
log = { version = "0.4.22", default-features = false }
rmp-serde = { version = "1.3.0", default-features = false }

matrix-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
utils.workspace = true
